--- a/main.html
+++ b/main.html
@@ -7,10 +7,43 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<form action="" method="post">
+		<label for="name">Name</label>
+		<input id="name" type="text" required placeholder="Name">
+		<label for="email">Email</label>
+		<input id="email" type="Email" required placeholder="Email">
 
+		<div><label for="gender_m, gender_f">Gender</label> <br>
+
+		<input id="gender_m" type="Radio" name="Gender" value="Gender" required >
+		<label for="gender_m">male</label>
+		<input id="gender_f" type="Radio" name="Gender" value="Gender" required >
+		<label for="gender_f">female</label></div>
+		
+		
+		<label for="car">Car Brands</label> 
+		<select id="car" type="select" placeholder="--Please choose an option--" required>
+			<option>toyota</option>
+			<option>honda</option>
+			<option>tata</option>
+		</select>
+		<label for="age">Age</label>
+		<input id="age" type="Number" required placeholder="Age">
+
+		<label for="dob">DOB</label>
+		<input id="dob" type="Date" required >
+
+		<label for="tel">Phone Number</label>
+		<input id="tel" type="Tel" placeholder="xxx-xxx-xxxx">
+
+		<label for="password">Password</label>
+		<input id="password" type="Password" placeholder="Password" required>
+
+		<label for="tos">I agree to the TOS</label>
+		<input id="tos" type="Checkbox" required>
+
+		<button type="submit">submit</button>
+	</form>
 </body>
 
 </html>
