--- a/main.html
+++ b/main.html
@@ -15,10 +15,10 @@
 
 		<div><label for="gender_m, gender_f">Gender</label> <br>
 
-		<input id="gender_m" type="Radio" name="Gender" value="Gender" required >
-		<label for="gender_m">male</label>
-		<input id="gender_f" type="Radio" name="Gender" value="Gender" required >
-		<label for="gender_f">female</label></div>
+		<input id="gender_m, gender_f" type="Radio" name="gender" value="Gender" required >
+		<label for="gender_m, gender_f">male</label>
+		<input id="gender_m, gender_f" type="Radio" name="gender" value="Gender" required >
+		<label for="gender_m, gender_f">female</label></div>
 		
 		
 		<label for="car">Car Brands</label> 
