--- a/main.html
+++ b/main.html
@@ -22,10 +22,11 @@
 		
 		
 		<label for="car">Car Brands</label> 
-		<select id="car" type="select" placeholder="--Please choose an option--" required>
-			<option>toyota</option>
-			<option>honda</option>
-			<option>tata</option>
+		<select id="car" type="select" name="cars" required>
+			<option value="">--Please choose an option-</option>
+			<option value="toyota">toyota</option>
+			<option value="honda">honda</option>
+			<option value="tata">tata</option>
 		</select>
 		<label for="age">Age</label>
 		<input id="age" type="Number" required placeholder="Age">
