--- a/main.html
+++ b/main.html
@@ -21,8 +21,8 @@
 		<label for="gender_m, gender_f">female</label></div>
 		
 		
-		<label for="car">Car Brands</label> 
-		<select id="car" type="select" name="cars" required>
+		<label for="cars">Car Brands</label> 
+		<select id="cars" type="select" name="cars" required>
 			<option value="">--Please choose an option-</option>
 			<option value="toyota">toyota</option>
 			<option value="honda">honda</option>
